orthanc-full/orthanc-full-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-full-ingress
  namespace: orthanc-full
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: breastscan.imaging.i3m.upv.es
    http:
      paths:
      - path: /orthanc-full(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-full-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-full-ohif-ingress
  namespace: orthanc-full
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: breastscan.imaging.i3m.upv.es
    http:
      paths:
      - path: /ohif-full
        pathType: Prefix
        backend:
          service:
            name: ohif-service
            port:
              number: 80
      - path: /dicom-web-full
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-full-service
            port:
              number: 80
